--- a/demo.html
+++ b/demo.html
@@ -10,10 +10,16 @@
     </style>
   </head>
   <body>
-    <div id='demo' class="demo" style="color:white; background:black; display:inline; padding:5px; font-weight:bold;">
+    <div id='demo' class="demo" style="color:white; background:black; display:inline; padding:5px; font-weight:bold; position:fixed; top: 5px; right: 5px;">
       Cogito igitur sum
     </div>
-    <div id='demo' class="demo" style="color:white; background:black; display:inline; padding:5px; font-weight:bold; float:right;">
+    <div id='demo' class="demo" style="color:white; background:black; display:inline; padding:5px; font-weight:bold; position:fixed; top: 5px; left: 5px;">
+      Cogito igitur sum
+    </div>
+    <div id='demo' class="demo" style="color:white; background:black; display:inline; padding:5px; font-weight:bold; position:fixed; bottom: 5px; left: 5px;">
+      Cogito igitur sum
+    </div>
+    <div id='demo' class="demo" style="color:white; background:black; display:inline; padding:5px; font-weight:bold;  position:fixed; bottom: 5px; right: 5px;">
       Cogito igitur sum
     </div>
     <script type="text/javascript">
